syntax = "proto3";
package proto;
option go_package = ".com/ASparkOfFire/ignis/proto";

message FDRequest {
  string Method = 1;
  map<string, HeaderFields> Header = 2;
  bytes Body = 3;
  int64 ContentLength = 4;
  StringSlice TransferEncoding = 5;
  string Host = 6;
  string RemoteAddr = 7;
  string RequestURI = 8;
  string Pattern = 9;
}

message FDResponse{
  bytes Body = 1;
  int32 StatusCode = 2;
  int32 Length = 3;
  map<string, HeaderFields> Header = 4;
}

message HeaderFields {
  repeated string fields = 1;
}

message StringSlice {
  repeated string fields = 1;
}